Gravatar profile images added.

--- a/EPI-use Tech Assessment/Views/Employees/deleteOtherEmployee.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/deleteOtherEmployee.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "deleteOtherEmployee";
     var id = ViewData["id"];
     var manager = ViewData["manager"];
+    var hash = ViewData["hash"];
 }
 
 <h2>Delete Employee</h2>
@@ -11,6 +12,14 @@
 <p>Are you sure you want to delete this employee.</p>
 <br />
 <dl class="dl-horizontal">
+
+    <dt class="col-md-4">
+        @Html.Label("Profile Image:")
+    </dt>
+
+    <dd>
+        <img src="https://www.gravatar.com/avatar/@hash" style="place-content:end" />
+    </dd>
 
     <dt class="col-md-4">
         @Html.Label("First Name:")
@@ -61,7 +70,7 @@
     </dd>
 
     <dt class="col-md-4">
-        @Html.Label("Salary:")
+        R @Html.Label("Salary:")
     </dt>
 
     <dd>
