--- a/EPI-use Tech Assessment/Views/Employees/homePage.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/homePage.cshtml
@@ -1,12 +1,19 @@
 ﻿@model EPI_use_Tech_Assessment.Models.Employee
 @{
     ViewBag.Title = "homePage";
+    var hash = ViewData["hash"];
 }
 
 <h2>Home Page</h2>
 <br />
 <p>Welcome to the EPI-use employee manager, @Model.FName @Model.LName.</p>
+<br />
+<img src="https://www.gravatar.com/avatar/@hash" style="place-content:end"/>
+<br />
+<p>Double click on an employee to see those that report to that employee.</p>
 <div class="col-md-4">
+    <br />
+    <br />
     <button type="button" class="btn btn-danger" style="width:250px; align-self:end" onclick="location.href='@Url.Action("loginPage", "Employees")'">
         Logout
     </button>
