Added more Gravatar functionality. More testing and styling done.

--- a/EPI-use Tech Assessment/Views/Employees/searchEmployees.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/searchEmployees.cshtml
@@ -41,6 +41,7 @@
 <br />
 <table>
     <tr>
+        <td style="font-family: Verdana; font-size: 14px; font-weight: bold; text-align: center; padding: 15px; ">Profile Image</td>
         <td style="font-family: Verdana; font-size: 14px; font-weight: bold; text-align: center; padding: 15px; ">Name</td>
         <td style="font-family: Verdana; font-size: 14px; font-weight: bold; text-align: center; padding: 15px; ">Surname</td>
         <td style="font-family: Verdana; font-size: 14px; font-weight: bold; text-align: center; padding: 15px; ">Date of Birth</td>
@@ -59,6 +60,9 @@
                 foreach (var item in ViewData["employees"] as List<EPI_use_Tech_Assessment.Models.Employee>)
                 {
                     <tr>
+                        <td style="font-family: Verdana; font-size: 12px; text-align: center; padding: 15px;">
+                            <img src="https://www.gravatar.com/avatar/@item.emailHash" style="place-content:end" />
+                        </td>
                         <td style="font-family: Verdana; font-size: 12px; text-align: center; padding: 15px;">@item.FName</td>
                         <td style="font-family: Verdana; font-size: 12px; text-align: center; padding: 15px; ">@item.LName</td>
                         <td style="font-family: Verdana; font-size: 12px; text-align: center; padding: 15px; ">@item.DOB</td>
