--- a/EPI-use Tech Assessment/Views/Employees/deleteOtherEmployee.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/deleteOtherEmployee.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "deleteOtherEmployee";
     var id = ViewData["id"];
     var manager = ViewData["manager"];
-    var hash = ViewData["hash"];
 }
 
 <h2>Delete Employee</h2>
@@ -18,7 +17,7 @@
     </dt>
 
     <dd>
-        <img src="https://www.gravatar.com/avatar/@hash" style="place-content:end" />
+        <img src="https://www.gravatar.com/avatar/@Model.emailHash" style="place-content:end" />
     </dd>
 
     <dt class="col-md-4">
