--- a/EPI-use Tech Assessment/Views/Employees/deletePage.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/deletePage.cshtml
@@ -1,7 +1,6 @@
 ﻿@model EPI_use_Tech_Assessment.Models.Employee
 @{
     ViewBag.Title = "deletePage";
-    var hash = ViewData["hash"];
 }
 
 <h2>Delete Account</h2>
@@ -13,7 +12,7 @@
     </dt>
 
     <dd>
-        <img src="https://www.gravatar.com/avatar/@hash" style="place-content:end" />
+        <img src="https://www.gravatar.com/avatar/@Model.emailHash" style="place-content:end" />
     </dd>
 
     <dt class="col-md-4">
