--- a/EPI-use Tech Assessment/Views/Employees/homePage.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/homePage.cshtml
@@ -1,13 +1,12 @@
 ﻿@model EPI_use_Tech_Assessment.Models.Employee
 @{
     ViewBag.Title = "homePage";
-    var hash = ViewData["hash"];
 }
 
 <h2>Home Page</h2>
 <br />
-<img src="https://www.gravatar.com/avatar/@hash" style="float:right;" />
-<p>Welcome to the EPI-use employee manager, @Model.FName @Model.LName.</p>
+<img src="https://www.gravatar.com/avatar/@Model.emailHash" style="float:right;" />
+<b>Welcome to the EPI-use employee terminal, @Model.FName @Model.LName.</b>
 <br />
 <br />
 <div class="col-md-4">
@@ -34,7 +33,7 @@
 
 </div>
 <div class="col-md-8">
-    <p>Double click on an employee to see those that report to that employee.</p>
+    <p>Double click on an employee to see those that report to them.</p>
     <div id="jstree">
         <ul>
             <li>Employees:</li>
