--- a/EPI-use Tech Assessment/Views/Employees/loginPage.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/loginPage.cshtml
@@ -21,7 +21,9 @@
     </button>
     <br />
     <br />
-    <input type="submit" style="display:-webkit-box; margin-left:auto; margin-right:auto;" class="btn btn-primary" , value="Login" />
+    <div class="col-md-8">
+        <input type="submit" style="display:-webkit-box; margin-left:auto; margin-right:auto;" class="btn btn-primary" , value="Login" />
+    </div>
     <br />
     <br />
     <div style="display:-webkit-box; margin-left:auto; margin-right:auto;">
