--- a/EPI-use Tech Assessment/Views/Employees/updateOtherEmployee.cshtml
+++ b/EPI-use Tech Assessment/Views/Employees/updateOtherEmployee.cshtml
@@ -40,7 +40,7 @@
     <input class="col-md-3" type="number" id="empNum" name="empNum" value="@Model.EmpNumber">
 
     <label class="col-md-3">@Html.Label("Salary (Monthly):")</label>
-    <input class="col-md-3" type="number" id="salary" name="salary" value="@Model.Salary">
+    <input class="col-md-3" type="number" id="salary" step=".01" name="salary" value="@Model.Salary">
 
     <br />
     <br />
